Update client application logic and update js for web client

--- a/ESCenter.Administrator/Views/Tutor/_UserInfo.cshtml
+++ b/ESCenter.Administrator/Views/Tutor/_UserInfo.cshtml
@@ -44,7 +44,7 @@
     <div class="col-md-4">
         <label asp-for="Role" class="form-label">Role</label>
         <select asp-for="Role" class="form-select">
-            <option selected>@UserRole.Tutor</option>
+            <option selected>@Role.Tutor</option>
         </select>
         <span asp-validation-for="Role" class="text-danger"></span>
     </div>
