--- a/ESCenter.Client/Views/Course/Detail.cshtml
+++ b/ESCenter.Client/Views/Course/Detail.cshtml
@@ -26,7 +26,7 @@
                         <b>Subject: </b> @Model.CourseDetailDto.SubjectName
                     </h4>
                     <form asp-controller="Course" asp-action="RequestGettingClass" class="col-lg-3">
-                        @if (Context.Session.GetString("role") == UserRole.Learner.ToString())
+                        @if (Context.Session.GetString("role") == Role.Learner.ToString())
                         {
                             <button class="btn btn-success" disabled type="submit">Request (<b>Charge</b>: @Model.CourseDetailDto.ChargeFee $)</button>
 
