--- a/ESCenter.Client/Views/Profile/Index.cshtml
+++ b/ESCenter.Client/Views/Profile/Index.cshtml
@@ -29,7 +29,7 @@
                     <li>
                         <a asp-action="Index" asp-controller="Tutor">Tutors</a>
                     </li>
-                    @if (User.FindFirst(ClaimTypes.Role)?.Value != UserRole.Tutor.ToString())
+                    @if (User.FindFirst(ClaimTypes.Role)?.Value != Role.Tutor.ToString())
                     {
                         <li>
                             <a asp-action="Index" asp-controller="Tutor">Tutor Registration</a>
@@ -113,7 +113,7 @@
                             <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password" id="profile-change-password-button">Change Password</button>
                         </li>
 
-                        @if (Model.UserProfileDto.Role == UserRole.Tutor.ToString())
+                        @if (Model.UserProfileDto.Role == Role.Tutor.ToString())
                         {
                             <li class="nav-item">
                                 <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-settings">Teaching Class</button>
@@ -145,7 +145,7 @@
                             <!-- End Learning Classes -->
                         </div>
                         
-                        @* @if (Model.UserProfileDto.Role == UserRole.Tutor.ToString()) *@
+                        @* @if (Model.UserProfileDto.Role == Role.Tutor.ToString()) *@
                         @* { *@
                         @*     <div class="tab-pane fade pt-3" id="profile-settings"> *@
                         @* *@
