--- a/ESCenter.Client/Views/Shared/_LoginLayout.cshtml
+++ b/ESCenter.Client/Views/Shared/_LoginLayout.cshtml
@@ -66,6 +66,10 @@
     <i class="bi bi-arrow-up-short"></i>
 </a>
 
+<div id="preloader">
+    <div class="loader"></div>
+</div>
+
 <!-- Vendor JS Files -->
 <script src="~/assets/vendor/purecounter/purecounter_vanilla.js"></script>
 <script src="~/assets/vendor/aos/aos.js"></script>
