--- a/ESCenter.Client/Views/Tutor/TutorRegistration.cshtml
+++ b/ESCenter.Client/Views/Tutor/TutorRegistration.cshtml
@@ -6,7 +6,6 @@
     ViewData["Title"] = "Tutor Registration";
 }
 
-
 <div class="alert alert-success alert-dismissible fade collapse" role="alert" id="successAlert">
     <i class="bi bi-check-circle me-1"></i>
     Update successfully!
@@ -30,6 +29,7 @@
                     <span asp-validation-for="FirstName" class="text-danger"></span>
 
                 </div>
+                
                 <div class="col-md-6">
                     <label asp-for="LastName" class="form-label">Last Name</label>
                     <input type="text" class="form-control" asp-for="LastName" readonly>
@@ -41,15 +41,13 @@
                     <label asp-for="Gender" class="form-label">Gender</label>
                     <select asp-for="Gender" class="form-select">
                         <option selected>@Model.Gender.ToString()</option>
-
-
                     </select>
                     <span asp-validation-for="Gender" class="text-danger"></span>
                 </div>
                 <div class="col-md-4">
                     <label asp-for="Role" class="form-label">Role</label>
                     <select asp-for="Role" class="form-select">
-                        <option selected>@UserRole.Tutor.ToString()</option>
+                        <option selected>@Role.Tutor.ToString()</option>
 
                     </select>
                     <span asp-validation-for="Role" class="text-danger"></span>
@@ -91,7 +89,7 @@
                 <div class="col-md-6">
                     <label asp-for="PhoneNumber" class="form-label">Number</label>
                     <div class="col-sm-12">
-                        <input type="number" asp-for="PhoneNumber" class="form-control" readonly>
+                        <input type="text" asp-for="PhoneNumber" class="form-control" readonly>
                     </div>
                     <span asp-validation-for="PhoneNumber" class="text-danger"></span>
 
