--- a/ESCenter.Client/Views/TutorProfile/_AllCourseRequests.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/_AllCourseRequests.cshtml
@@ -1,7 +1,6 @@
-﻿@model IEnumerable<ESCenter.Client.Application.Contracts.Courses.Dtos.CourseRequestDto>
+﻿@model IEnumerable<ESCenter.Client.Application.ServiceImpls.TutorProfiles.BasicCourseRequestDto>
 @{
     var i = 0;
-    // Layout = "_ScriptLayout";
 }
 <div class="card">
     <div class="card-body">
