--- a/ESCenter.Client/Views/Shared/_ScriptLayout.cshtml
+++ b/ESCenter.Client/Views/Shared/_ScriptLayout.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    string name = Context.Session.GetString("name") as string ?? "user";
-}
-
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,48 +9,79 @@
     <!-- Favicons -->
     <link href="~/assets/img/favicon.png" rel="icon">
     <link href="~/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
+    <link href="~/assets/vendor/alertifyjs/css/alertify.min.css" rel="stylesheet">
     <link href="~/assets/vendor/animate.css/animate.min.css" rel="stylesheet">
     <link href="~/assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="~/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="~/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="~/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="~/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link href="~/simple-datatables/style.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
     <link href="~/assets/css/style.css" rel="stylesheet">
 
-    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/> *@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
+
 
 </head>
 <body>
 
-
-@RenderBody()
-
+<main role="main" id="main" class="pb-3">
+    @RenderBody()
+</main>
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
     <i class="bi bi-arrow-up-short"></i>
 </a>
 
-<div id="preloader">
-    <div class="loader"></div>
-</div>
-
 <!-- Vendor JS Files -->
 <script src="~/assets/vendor/purecounter/purecounter_vanilla.js"></script>
 <script src="~/assets/vendor/aos/aos.js"></script>
-@* <script src="~/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> *@
 <script src="~/assets/vendor/swiper/swiper-bundle.min.js"></script>
 <script src="~/assets/vendor/php-email-form/validate.js"></script>
 <script src="~/simple-datatables/simple-datatables.js"></script>
+<script src="~/assets/vendor/alertifyjs/alertify.min.js"></script>
+
+
+<!-- Load FilePond library -->
+<script src="https://unpkg.com/filepond/dist/filepond.js"></script>
+
+<!-- Turn all file input elements into ponds -->
+<script>
+  FilePond.parse(document.body);
+</script>
+
+
+<script>
+  $(function(){
+  
+    // First register any plugins
+    $.fn.filepond.registerPlugin(FilePondPluginImagePreview);
+
+    // Turn input element into a pond
+    $('.my-pond').filepond();
+
+    // Set allowMultiple property to true
+    $('.my-pond').filepond('allowMultiple', true);
+  
+    // Listen for addfile event
+    $('.my-pond').on('FilePond:addfile', function(e) {
+        console.log('file added event', e);
+    });
+
+    // Manually add a file using the addfile method
+    $('.my-pond').first().filepond('addFile', 'index.html').then(function(file){
+      console.log('file added', file);
+    });
+  
+  });
+</script>
 
 <!-- Template Main JS File -->
 <script src="~/assets/js/main.js"></script>
