--- a/ESCenter.Client/Views/TutorProfile/_ProfileTutorEdit.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/_ProfileTutorEdit.cshtml
@@ -1,34 +1,13 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@using ESCenter.Client.Application.Contracts.Courses.Dtos
-@model ESCenter.Client.Application.ServiceImpls.Tutors.Queries.TutorForProfileDto
+@using ESCenter.Domain.Shared
+@model ESCenter.Client.Application.ServiceImpls.TutorProfiles.TutorForProfileDto
 @{
-    //AddressDto addressDto = ViewData["Addresses"] as AddressDto ?? new AddressDto(new List<CityDto>());
-    var subjects = ViewData["Subjects"] as IEnumerable<SubjectDto> ?? [];
+    var academics = EnumProvider.AcademicLevels;
+    var majors = Model.Majors;
 }
-<!-- Profile Edit Form -->
+
 <form asp-action="EditTutorInformation" asp-controller="TutorProfile" onsubmit="return callPostActionWithForm(this);">
     <input asp-for="Id" hidden/>
-    <!-- ----------------------------------- -->
-    <div class="row mb-3">
-        <label class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
-        <div class="col-md-8 col-lg-9">
-            <div id="filesInputValues">
-                @foreach (var i in Model.VerificationDtos)
-                {
-                    <img src="@i.Image"style="max-width: 120px;" alt="Profile" id="avatar">
-                    <input id="image" asp-for="@i.Image" hidden type="text"/>
-                }
-            </div>
-            @if (Model.VerificationDtos.Count <= 0)
-            {
-                <div class="pt-2">
-                    <input type="file" id="file" name="files" multiple="multiple" onchange="LoadImage('@Url.Action("ChooseProfilePictures", "Tutor", null)','file'); return false;"/>
-                </div>
-            }
-        </div>
-
-    </div>
-
     <h5 class="col-md-12">Tutor information</h5>
 
     <div class="col-md-4">
@@ -36,13 +15,13 @@
         <select asp-for="AcademicLevel" class="form-select">
             <option selected>@Model.AcademicLevel.ToString()</option>
 
-            @* @foreach (string i in academics) *@
-            @* { *@
-            @*     @if (i != Model.AcademicLevel.ToString()) *@
-            @*     { *@
-            @*         <option> @i </option> *@
-            @*     } *@
-            @* } *@
+            @foreach (string i in academics)
+            {
+                @if (i != Model.AcademicLevel)
+                {
+                    <option> @i </option>
+                }
+            }
         </select>
         <span asp-validation-for="AcademicLevel" class="text-danger"></span>
     </div>
@@ -59,7 +38,7 @@
             @if (!Model.IsVerified)
             {
                 <label class="form-check-label" asp-for="IsVerified">
-                    You are not verified. Contact center for more informations.
+                    You are not verified. Contact center for more information.
                 </label>
             }
             else
@@ -68,7 +47,6 @@
                     You are verified.
                 </label>
             }
-
         </div>
 
     </div>
@@ -83,16 +61,13 @@
                 </button>
             </div>
 
-            <!-- List group with Advanced Contents -->
-            <div class="list-group">
-                @foreach (var s in Model.Majors)
+            <div class="list-group" style="grid-template-columns: repeat(4,1fr); display: grid">
+                @foreach (var s in majors)
                 {
-                    <input name="SubjectId" value="@s.SubjectId" hidden="hidden"/>
-                    <a asp-action="Detail" asp-controller="Subject" asp-route-id="@s.SubjectId" class="list-group-item list-group-item-action">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">@s.SubjectName</h5>
-                        </div>
-                    </a>
+                    <li class="list-group-item" style="border: none">
+                        <input class="form-check-input" name="majorIds" value="@s.SubjectId" type="checkbox" checked="@s.IsMajored"/>
+                        <label class="form-check-label">@s.SubjectName</label>
+                    </li>
                 }
             </div><!-- End List group Advanced Content -->
 
