fix bugs on change password

--- a/ESCenter.Client/Views/Profile/_ChangePassword.cshtml
+++ b/ESCenter.Client/Views/Profile/_ChangePassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model ESCenter.Client.Models.ChangePasswordRequest
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model ESCenter.Client.Models.ChangePasswordRequest
 
 <!-- Change Password Form -->
 <form asp-action="ChangePassword" asp-controller="Profile" onsubmit="return callPostActionWithForm(this);">
@@ -21,8 +22,8 @@
     <div class="row mb-3">
         <label for="confirmedPassword" class="col-md-4 col-lg-3 col-form-label">Re-enter New Password</label>
         <div class="col-md-8 col-lg-9">
-            <input asp-for="ConfirmPassword" type="password" class="form-control" id="confirmedPassword" value="@Model.ConfirmPassword">
-            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            <input asp-for="ConfirmedPassword" type="password" class="form-control" id="confirmedPassword" value="@Model.ConfirmedPassword">
+            <span asp-validation-for="ConfirmedPassword" class="text-danger"></span>
         </div>
     </div>
 
