--- a/ESCenter.Client/Views/Shared/_Layout.cshtml
+++ b/ESCenter.Client/Views/Shared/_Layout.cshtml
@@ -298,6 +298,11 @@
         </div>
     </div>
 </footer>
+
+<div id="preloader">
+    <div class="loader"></div>
+</div>
+
 <!-- Messenger Chat plugin Code -->
 <div id="fb-root"></div>
 
