--- a/ESCenter.Client/Views/Profile/Index.cshtml
+++ b/ESCenter.Client/Views/Profile/Index.cshtml
@@ -1,54 +1,6 @@
-﻿@using System.Security.Claims
-@using ESCenter.Domain.Shared
-@using ESCenter.Domain.Shared.Courses
-@using Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model ESCenter.Client.Models.ProfileViewModel
-@{
-    List<string> genders = EnumProvider.FullGendersOption;
-}
-@if (Model.IsPartialLoad is true)
-{
-    <div id="header">
-        <div class="container d-flex align-items-center">
-            <h1 class="logo me-auto">
-                <a href="/">EduSmart</a>
-            </h1>
 
-
-            <nav id="navbar" class="navbar order-last order-lg-0">
-                <ul>
-                    <li>
-                        <a href="/">Home</a>
-                    </li>
-                    <li>
-                        <a asp-action="About" asp-controller="Home">About</a>
-                    </li>
-                    <li>
-                        <a asp-action="Index" asp-controller="Course">Classes</a>
-                    </li>
-                    <li>
-                        <a asp-action="Index" asp-controller="Tutor">Tutors</a>
-                    </li>
-                    @if (User.FindFirst(ClaimTypes.Role)?.Value != Role.Tutor.ToString())
-                    {
-                        <li>
-                            <a asp-action="Index" asp-controller="Tutor">Tutor Registration</a>
-                        </li>
-                    }
-                    <li>
-                        <a asp-controller="Home" asp-action="Contact">Contact</a>
-                    </li>
-                </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
-            </nav><!-- .navbar -->
-
-            <a asp-action="Create" asp-controller="Course" class="get-started-btn">Get Started</a>
-        </div>
-
-
-    </div>
-    <!-- End Header -->
-}
 <div class="alert alert-success alert-dismissible fade collapse" role="alert" id="successAlert">
     <i class="bi bi-check-circle me-1"></i>
     Update successfully!
@@ -63,7 +15,6 @@
 <section class="profile" style="padding: 180px 0;">
     <div class="row">
         <div class="col-xl-4">
-
             <div class="card">
                 <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
 
@@ -105,7 +56,6 @@
                             <button class="nav-link" data-bs-toggle="tab" id="profile-edit-button" data-bs-target="#profile-edit">Edit Profile</button>
                         </li>
 
-
                         <li class="nav-item">
                             <button class="nav-link" data-bs-toggle="tab" data-bs-target="#learning-class">Learning Class</button>
                         </li>
@@ -133,7 +83,7 @@
                             <partial name="_allLearningClass" model="@Model.LearningCourseForListDtos"/>
                             <!-- End Learning Classes -->
                         </div>
-                        
+
                         @* @if (Model.UserProfileDto.Role == Role.Tutor.ToString()) *@
                         @* { *@
                         @*     <div class="tab-pane fade pt-3" id="profile-settings"> *@
