--- a/ESCenter.Client/Views/Profile/_LearningCourseDetail.cshtml
+++ b/ESCenter.Client/Views/Profile/_LearningCourseDetail.cshtml
@@ -1,21 +1,17 @@
 ﻿@using ESCenter.Client.Application.Contracts.Courses.Dtos
+@using ESCenter.Client.Models
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @model LearningCourseDetailForClientDto
 
 @{
     ViewData["Title"] = "Learning Course Details";
-    ViewData["CourseId"] = Model.Id;
+    ViewData["CourseId"] = Model.Id.ToString();
 }
 
 <div class="container" data-aos="fade-up">
     <div class="row">
         <div class="col-lg-12 row">
             <h3>Requirement Description</h3>
-
-            <div class="col-lg-6 mb-4">
-                <h6>Contact</h6>
-                <p class="form-control">@Model.</p>
-            </div>
 
             <div class="col-lg-12 mb-4">
                 <h6>Title</h6>
@@ -46,9 +42,7 @@
         </div>
         @if (Model.TutorId != Guid.Empty)
         {
-            <partial name="_ReviewCourseForm" view-data="ViewData"/>
+            <partial name="_ReviewCourseForm" view-data="ViewData" model="new ReviewCourseViewModel(Model.Detail,Model.Rate)"/>
         }
-
-
     </div>
 </div>
