--- a/ESCenter.Client/Views/Tutor/Detail.cshtml
+++ b/ESCenter.Client/Views/Tutor/Detail.cshtml
@@ -22,6 +22,7 @@
                 <p>
                     @Model.Description
                 </p>
+
             </div>
 
             <div class="col-lg-8">
@@ -57,12 +58,18 @@
                     <h5>Rate</h5>
                     <p>@(Model.Rate == 0 ? "Unknown" : Model.Rate)</p>
                 </div>
-
-
             </div>
-
+            @if (User.Identity is not null && User.Identity.IsAuthenticated)
+            {
+            <form class="row g-3" asp-action="RequestTutor" asp-route-tutorId="@Model.Id">
+                <div class="form-group mt-3">
+                    <textarea class="form-control" name="requestMessage" placeholder="Type your detail request"></textarea>
+                </div>
+                <button class="btn btn-primary" type="submit">Request</button>
+            </form>
+            }
+            
         </div>
-
     </div>
 </section><!-- End Course Details Section -->
 <div class="container aos-init aos-animate" data-aos="fade-up">
