--- a/ESCenter.Client/Views/TutorProfile/Index.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/Index.cshtml
@@ -42,7 +42,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <button class="nav-link" data-bs-toggle="tab" data-bs-target="#teaching-class">Learning Class</button>
+                            <button class="nav-link" data-bs-toggle="tab" data-bs-target="#teaching-class">Your course requests</button>
                         </li>
 
                         <li class="nav-item">
