--- a/ESCenter.Administrator/Views/Shared/_Layout.cshtml
+++ b/ESCenter.Administrator/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 @{
     var image = HttpContextAccessor.HttpContext?.Session.GetString("image") ?? "/assets/img/avatar-default.svg";
     var name = HttpContextAccessor.HttpContext?.Session.GetString("name") ?? "unknown";
-} 
+}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -14,7 +14,7 @@
     <title>@ViewData["Title"] - EduSmart</title>
     @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/CED.Web.styles.css" asp-append-version="true" />*@
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -127,6 +127,15 @@
                         <i class="bi bi-circle"></i><span>Tutor</span>
                     </a>
                 </li>
+                @if(User.IsInRole("SuperAdmin"))
+                {
+                    <li>
+                        <a asp-action="Index" asp-controller="Staff">
+                            <i class="bi bi-circle"></i><span>Admin</span>
+                        </a>
+                    </li>
+                }
+               
             </ul>
         </li><!-- End Tables Nav -->
 
