--- a/ESCenter.Administrator/Views/Staff/Index.cshtml
+++ b/ESCenter.Administrator/Views/Staff/Index.cshtml
@@ -15,7 +15,7 @@
 <div class="card">
     <div class="card-body">
         <div class="card-title">
-            <a type="button" class="btn btn-success" asp-action="Create" asp-controller="User">Create</a>
+            <a type="button" class="btn btn-success" asp-action="Create" asp-controller="Staff">Create</a>
         </div>
 
 
