--- a/ESCenter.Administrator/Views/Staff/Create.cshtml
+++ b/ESCenter.Administrator/Views/Staff/Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model ESCenter.Admin.Application.Contracts.Users.Learners.LearnerForCreateUpdateDto
+﻿@using ESCenter.Domain.Shared.Courses
+@model ESCenter.Admin.Application.Contracts.Users.Learners.LearnerForCreateUpdateDto
 
 @{
     ViewData["Title"] = "Create";
     List<string> roles = ViewData["Roles"] as List<string> ?? new List<string>();
     List<string> genders = ViewData["Genders"] as List<string> ?? new List<string>();
-    List<string> academics = ViewData["AcademicLevels"] as List<string> ?? new List<string>();
 }
 
 
@@ -17,7 +17,7 @@
         <h5 class="card-title">Personal Information</h5>
 
         <!-- Multi Columns Form -->
-        <form class="row g-3" asp-action="Create" asp-controller="User">
+        <form class="row g-3" asp-action="Create" asp-controller="Staff">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="col-md-6">
@@ -52,14 +52,7 @@
                 <label asp-for="Role" class="form-label">Role</label>
                 <select asp-for="Role" class="form-select">
                     <option selected>@Model.Role.ToString()</option>
-
-                    @foreach (string i in roles)
-                    {
-                        @if (i != Model.Role.ToString())
-                        {
-                            <option> @i </option>
-                        }
-                    }
+                            <option> @Role.Admin.ToString() </option>
                 </select>
                 <span asp-validation-for="Role" class="text-danger"></span>
             </div>
