--- a/ESCenter.Administrator/Views/Tutor/Index.cshtml
+++ b/ESCenter.Administrator/Views/Tutor/Index.cshtml
@@ -20,7 +20,7 @@
         <table id="example" class="table datatable">
             <thead>
             <tr>
-                <!-- a avatar comlumn will be added -->
+                <!-- an avatar column will be added -->
                 <th scope="col">#</th>
                 <th scope="col">Full Name</th>
                 <th scope="col">University</th>
@@ -48,11 +48,11 @@
                         <a asp-action="Detail" asp-route-id="@user.Id">Details</a> |
                         @if (user.NumberOfRequests == 0)
                         {
-                            <a asp-action="ViewTutorRequests" asp-route-id="@user.Id">Tutor's Requests</a>
+                            <button class="btn btn-link">No Requests</button>
                         }
                         else
                         {
-                            <a asp-action="ViewTutorRequests" asp-route-id="@user.Id">Tutor's Requests(@user.NumberOfRequests)</a>
+                            <button class="btn btn-link" onclick="OpenGetDialog('@Url.Action("ViewTutorRequests", "Tutor", new {id = user.Id})','Tutor Requests')">(@user.NumberOfRequests) Requests</button>
                         }
                         |
                         <a href="#" onclick="OpenGetDialog('@Url.Action("Delete", "User", new { id = user.Id })','Are you sure you want to delete this user?');">Delete</a>
