--- a/ESCenter.Administrator/Views/Staff/Index.cshtml
+++ b/ESCenter.Administrator/Views/Staff/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="pagetitle">
-    <h1>User Management</h1>
+    <h1>Staff Management</h1>
     <nav>
         <ol class="breadcrumb">
             <li class="breadcrumb-item active">All</li>
