--- a/ESCenter.Administrator/Views/Home/Index.cshtml
+++ b/ESCenter.Administrator/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    int i = 0;
 }
 @using ESCenter.Domain.Shared.Courses
 @model DashBoardViewModel
@@ -356,46 +357,41 @@
         </div>
 
         <div class="card-body pb-0">
-            <h5 class="card-title">Tutors </h5>
+            <h5 class="card-title">Latest Tutor Requests </h5>
 
-            <!-- Table with stripped rows -->
             <table id="example" class="table datatable">
                 <thead>
                 <tr>
                     <!-- a avatar column will be added -->
                     <th scope="col">#</th>
-                    <th scope="col">Full Name</th>
-                    <th scope="col">Gender</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Phone Number</th>
-                    <th data-sortable="false" scope="col" style="width:30%;">Actions</th>
+                    <th scope="col">Learner Name</th>
+                    <th scope="col">Learner Contact</th>
+                    <th scope="col">Tutor Name</th>
+                    <th scope="col">Tutor Contact</th>
+                    <th scope="col">Tutor Email</th>
+                    <th scope="col">Message</th>
                 </tr>
                 </thead>
                 <tbody>
 
-                @* @foreach (var user in Model.TutorTotalValueModel.Models) *@
-                @* { *@
-                @*     y++; *@
-                @*     <tr> *@
-                @*         <th scope="row"> *@
-                @*             <input hidden name="Id" value="@user.Id"/> *@
-                @*             @y *@
-                @*         </th> *@
-                @*         <td>@user.FirstName @user.LastName</td> *@
-                @*         <td> *@
-                @* *@
-                @*             @user.Gender *@
-                @*         </td> *@
-                @*         <td>@user.Email</td> *@
-                @*         <td>@user.PhoneNumber</td> *@
-                @*         <td> *@
-                @*             <a class="btn btn-link" asp-action="Detail" asp-controller="Tutor" asp-route-id="@user.Id">Details</a> *@
-                @*         </td> *@
-                @*     </tr> *@
-                @* } *@
+                @foreach (var request in Model.TutorRequests)
+                {
+                    i++;
+                    <tr>
+                        <th scope="row">
+                            <input hidden name="Id" value="@request.Id"/>
+                            @i
+                        </th>
+                        <td>@request.Name</td>
+                        <td>@request.PhoneNumber</td>
+                        <td>@request.TutorFullName</td>
+                        <td>@request.TutorPhoneNumber</td>
+                        <td>@request.TutorEmail</td>
+                        <td>@request.RequestMessage</td>
+                    </tr>
+                }
                 </tbody>
             </table>
-            <!-- End Table with stripped rows -->
 
         </div>
 
@@ -494,7 +490,7 @@
 
         </div>
     </div><!-- End Recent Activity -->
-    
+
     <!-- Area Chart -->
     <div class="card" id="areaChartCard">
 
@@ -669,11 +665,3 @@
 
 </div>
 </section>
-
-@section Scripts
-{
-
-    <script>
-
-    </script>
-}
