--- a/ESCenter.Administrator/Views/Profile/_ProfileEdit.cshtml
+++ b/ESCenter.Administrator/Views/Profile/_ProfileEdit.cshtml
@@ -1,35 +1,34 @@
-﻿@using ESCenter.Domain.Shared
-@using Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model ESCenter.Application.Accounts.Queries.GetUserProfile.UserProfileDto
 @{
-    var genders = EnumProvider.Genders;
+    ViewData["Title"] = "Profile";
 }
 
-<form asp-action="Edit" asp-controller="Profile" onsubmit="return callPostActionWithForm(this);">
-    
-     <div class="row mb-3">
-            <label asp-for="Avatar" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
-            <div class="col-md-8 col-lg-9">
-                <img src="@Model.Avatar" alt="Profile" id="avatar">
-                <input id="image" asp-for="Avatar" hidden type="text"/>
-                <div class="pt-2">
-    
-                    <input type="file" id="formFile" name="formFile" style="visibility: hidden; width: 1px; height: 1px" onchange="LoadImage('@Url.Action("ChangeAvatar", "Profile", new { id = @Model.Id })','avatar'); return false;"/>
-                    <a href="" onclick="document.getElementById('formFile').click(); return false" class="btn btn-primary btn-sm" title="Upload new profile image">
-                        <i class="bi bi-upload"></i>
-                    </a>
-    
-                    <a href="#" class="btn btn-danger btn-sm" title="Remove my profile image">
-                        <i class="bi bi-trash"></i>
-                    </a>
-                </div>
+@* <form asp-action="Edit" asp-controller="Profile" onsubmit="return callPostActionWithForm(this);"> *@
+<form>
+    <div class="row mb-3">
+        <label asp-for="Avatar" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
+        <div class="col-md-8 col-lg-9">
+            <img src="@Model.Avatar" alt="Profile" id="avatar">
+            <input id="image" asp-for="Avatar" hidden type="text"/>
+            <div class="pt-2">
+
+                <input type="file" id="formFile" name="formFile" style="visibility: hidden; width: 1px; height: 1px" onchange="LoadImage('@Url.Action("ChangeAvatar", "Profile", new { id = @Model.Id })','avatar'); return false;"/>
+                <a href="" onclick="document.getElementById('formFile').click(); return false" class="btn btn-primary btn-sm" title="Upload new profile image">
+                    <i class="bi bi-upload"></i>
+                </a>
+
+                <a href="#" class="btn btn-danger btn-sm" title="Remove my profile image">
+                    <i class="bi bi-trash"></i>
+                </a>
             </div>
         </div>
+    </div>
 
     <div class="row mb-3">
         <label asp-for="FirstName" class="col-md-4 col-lg-3 col-form-label">First Name</label>
         <div class="col-md-8 col-lg-9">
-            <input asp-for="FirstName" type="text" class="form-control" id="firstname">
+            <input asp-for="FirstName" readonly type="text" class="form-control" id="firstname">
             <span asp-validation-for="FirstName" class="text-danger"></span>
 
         </div>
@@ -37,7 +36,7 @@
     <div class="row mb-3">
         <label for="about" class="col-md-4 col-lg-3 col-form-label">LastName</label>
         <div class="col-md-8 col-lg-9">
-            <input asp-for="LastName" type="text" class="form-control" id="lastname">
+            <input readonly asp-for="LastName" type="text" class="form-control" id="lastname">
             <span asp-validation-for="LastName" class="text-danger"></span>
 
         </div>
@@ -45,7 +44,7 @@
     <div class="row mb-3">
         <label asp-for="BirthYear" class="col-md-4 col-lg-3 col-form-label">Birth</label>
         <div class="col-md-8 col-lg-9">
-            <input type="number" class="form-control" asp-for="BirthYear"/>
+            <input type="number" class="form-control" readonly asp-for="BirthYear"/>
             <span asp-validation-for="BirthYear" class="text-danger"></span>
 
         </div>
@@ -57,14 +56,6 @@
         <div class="col-md-8 col-lg-9">
             <select asp-for="Gender" class="form-select">
                 <option selected>@Model.Gender</option>
-
-                @foreach (var i in genders)
-                {
-                    @if (i != Model.Gender.ToString())
-                    {
-                        <option> @i </option>
-                    }
-                }
             </select>
             <span asp-validation-for="Gender" class="text-danger"></span>
 
@@ -75,7 +66,7 @@
     <div class="row mb-3">
         <label for="about" class="col-md-4 col-lg-3 col-form-label">About</label>
         <div class="col-md-8 col-lg-9">
-            <textarea asp-for="Description" class="form-control" id="about" style="height: 100px"></textarea>
+            <textarea asp-for="Description" readonly class="form-control" id="about" style="height: 100px"></textarea>
             <span asp-validation-for="Description" class="text-danger"></span>
 
         </div>
@@ -139,7 +130,7 @@
     <input type="hidden" asp-for="Id"/>
 
     <div class="text-center">
-        <button type="submit" class="btn btn-primary">Save Changes</button>
+        <button type="button" disabled="" class="btn btn-primary">Save Changes</button>
     </div>
 </form>
 
