fix bugs on getting course requests and request detail

--- a/ESCenter.Client/Views/TutorProfile/_AllCourseRequests.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/_AllCourseRequests.cshtml
@@ -32,7 +32,8 @@
                     <td>@requestGettingClassDto.RequestStatus</td>
 
                     <td>
-                        <button type="button" class="btn btn-primary" onclick="OpenGetDialog('@Url.Action("TeachingClassDetail", "Profile", new { requestId = requestGettingClassDto.Id, classId = requestGettingClassDto.CourseId })','Detail');">
+                        <button type="button" class="btn btn-primary"
+                                onclick="OpenGetDialog('@Url.Action("TeachingClassDetail", "TutorProfile", new { courseId = requestGettingClassDto.CourseId })','Detail');">
                             Detail
                         </button>
                     </td>
