--- a/ESCenter.Client/Views/TutorProfile/_UploadComponent.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/_UploadComponent.cshtml
@@ -1,35 +1,26 @@
-﻿<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 5 Drag & Drop </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-
-  </head>
-<body>
-
-<div class="container mt-5">
-  <div class="card">
-    <div class="card-body">
-      <div id="drop-area" class="border rounded d-flex justify-content-center align-items-center"
-        style="height: 200px; cursor: pointer">
-        <div class="text-center">
-          <i class="bi bi-cloud-arrow-up-fill text-primary" style="font-size: 48px"></i>
-          <p class="mt-3">
-            Drag and drop your image here or click to select a file.
-          </p>
+﻿<div class="container mt-5">
+    <div class="card">
+        <div class="card-body">
+            <div id="drop-area" class="border rounded d-flex justify-content-center align-items-center"
+                 style="height: 200px; cursor: pointer">
+                <div class="text-center">
+                    <i class="bi bi-cloud-arrow-up-fill text-primary" style="font-size: 48px"></i>
+                    <p class="mt-3">
+                        Drag and drop your image here or click to select a file.
+                    </p>
+                </div>
+            </div>
+            <input type="file" name="fileElems" id="fileElem" multiple accept="image/*" class="d-none"/>
+            <div id="gallery"></div>
         </div>
-      </div>
-      <input type="file" name="fileElems" id="fileElem" multiple accept="image/*" class="d-none" />
-      <div id="gallery"></div>
     </div>
-  </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-<script>
+@section Scripts
+{
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script>
   let dropArea = document.getElementById('drop-area');
   let fileElem = document.getElementById('fileElem');
   let gallery = document.getElementById('gallery');
@@ -91,5 +82,7 @@
     }
   }
 </script>
-</body>
-</html>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+}
