--- a/ESCenter.Administrator/Views/Home/_TotalClasses.cshtml
+++ b/ESCenter.Administrator/Views/Home/_TotalClasses.cshtml
@@ -1,4 +1,4 @@
-﻿@model TotalValueModel<ESCenter.Admin.Application.DashBoards.MetricObject>
+﻿@model TotalValueModel<ESCenter.Admin.Application.ServiceImpls.DashBoards.MetricObject>
 
 <!-- Change Password Form -->
 <h5 class="card-title">Classes <span>| @(Model.Time) </span></h5>
