--- a/ESCenter.Administrator/Views/Course/Index.cshtml
+++ b/ESCenter.Administrator/Views/Course/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<ESCenter.Admin.Application.Contracts.Courses.Dtos.CourseForListDto>
 @{
-    int i = 0;
+    var i = 0;
 }
 
 <div class="pagetitle">
